--- a/NVPN.Cross/Components/Routes.razor
+++ b/NVPN.Cross/Components/Routes.razor
@@ -1,5 +1,4 @@
-﻿@using NVPN.Native
-<Router AppAssembly="@typeof(MauiProgram).Assembly">
+﻿<Router AppAssembly="@typeof(MauiProgram).Assembly">
     <Found Context="routeData">
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(Layout.MainLayout)" />
         <FocusOnNavigate RouteData="@routeData" Selector="h1" />
